--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,11 @@
             <artifactId>primefaces</artifactId>
             <version>13.0.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>primeflex</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <!-- javax.* APIs -->
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
