--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -96,6 +96,6 @@
     </mime-mapping>
 
     <welcome-file-list>
-        <welcome-file>test.xhtml</welcome-file>
+        <welcome-file>main.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
